# Predictive-Maintenance-NASA-Turbofan

./: .gitignore  README.md  app.py  confusion_matrices.csv  feature_names.joblib  main.py  model_results.json  neural_network_model.h5  pyproject.toml  scaler.joblib  synthetic_data.csv  xgboost_model.joblib
docs/: api_reference.md  data_dictionary.md  development_guide.md  project_report.md
models/: fitted_scaler.joblib  lstm_model.keras
notebooks/: 01_eda_FD001.ipynb  02_preprocessing.ipynb  03_train_models.ipynb  04_analysis_inspection.ipynb  05_optimize_lstm.ipynb  06_final_performance.ipynb
results/: final_test_results.csv  test_performance_metrics.csv  test_predictions.csv
src/data/: preprocessing.py
src/models/: final_evaluation.py  lstm_model.py  optimize_model.py  train_baseline.py  train_model.py
src/predictive_maintenance_turbofan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/utils/: io.py  metrics.py
